cleaning up css, adding more links

--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
     		<h2>Let's Work Together</h2>
     		<p> I'm currently a soon-to-graduate software engineer looking for opportunities. Drop me a line if you're interested!</p>
     		<a href="mailto:wass.jessica@gmail.com" class="email_link">wass.jessica@gmail.com</a>
+    		<br>
+    		<a href="https://www.linkedin.com/pub/jessica-wass/60/532/98b" class="email_link">LinkedIn</a>
     	</div>
     </section>
 
@@ -64,6 +66,17 @@
 	</div>
 	</div>
 	</section>
+<!--
+	<section class="footer">
+  <div class="container">
+    <ul class="links">
+      <li><a href="https://twitter.com/sayyestojess" img="/images/insta.png" title="Follow me on Twitter"><i class="icon-twitter"></i></a></li>
+      <li><a href="http://instagram.com/sayestojess" title="View more of my work on Dribbble"><i class="icon-dribbble"></i></a></li>
+      <li><a href="mailto:wass.jessica@gmail.com" title="Email me"><i class="icon-email"></i></a></li>
+    </ul>
+  </div>
+</section>
+-->
 </body>
 
 <!-- https://api.instagram.com/v1/users/983750504/media/recent/?client_id=96595184ea8548c8b33f3ea59c7edcda -->
