removed superfluous css, removed footer in progress

--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
 
     <section class="project instagram">
    <div class="container clearfix">
-    <h2> Recent Instagram Posts</h2>
+    <h2> 
+    	<a href = "http://instagram.com/sayestojess">Recent Instagram Posts</a>
+    </h2>
 	<!-- <button onclick="displayPhotos()">Get insta</button> -->
     <div id="instagram" class="row">
 	    <ul id="photo-list"></ul>
